--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <header class="header">
             <div class="container">
                 <div class="header-box">
-                    <div class="header-logo logo">
+                    <a href="./index.html" class="header-logo logo">
                         <img src="./img/logo.png" alt="logo">
-                    </div>
+                    </a>
                     <div class="header-controls">
                         <button class="btn btn-primary">
                             <img src="./img/icons/user.png" alt="user">
@@ -50,21 +50,242 @@
                         <h3 class="products-header--title">Рестораны</h3>
                         <input type="text" class="products-header--search"  placeholder="Поиск блюд и ресторанов">
                     </div>
+
+                    <div class="products-wrapper">
+                        <a href="./goods.html" class="products-card">
+                            <div class="products-card__image">
+                                <img src="./img/rest-1.jpg" alt="rest-1">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Пицца плюс</h4>
+                                    <div class="products-card__description--badge">50 мин</div>
+                                </div>
+                                <div class="products-card__description-info">
+                                    <div class="products-card__description-info--raiting">
+                                        <img src="./img/icons/star.svg" alt="star">
+                                        4.5
+                                    </div>
+                                    <div class="products-card__description-info--price">
+                                        От 90 грн.
+                                    </div>
+                                    <div class="products-card__description-info--group">
+                                        Пицца
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="./goods.html" class="products-card">
+                            <div class="products-card__image">
+                                <img src="./img/rest-2.jpg" alt="rest-2">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Тануки</h4>
+                                    <div class="products-card__description--badge">50 мин</div>
+                                </div>
+                                <div class="products-card__description-info">
+                                    <div class="products-card__description-info--raiting">
+                                        <img src="./img/icons/star.svg" alt="star">
+                                        4.5
+                                    </div>
+                                    <div class="products-card__description-info--price">
+                                        От 90 грн.
+                                    </div>
+                                    <div class="products-card__description-info--group">
+                                        Пицца
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="./goods.html" class="products-card">
+                            <div class="products-card__image">
+                                <img src="./img/rest-3.jpg" alt="rest-3">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">FoodBand</h4>
+                                    <div class="products-card__description--badge">50 мин</div>
+                                </div>
+                                <div class="products-card__description-info">
+                                    <div class="products-card__description-info--raiting">
+                                        <img src="./img/icons/star.svg" alt="star">
+                                        4.5
+                                    </div>
+                                    <div class="products-card__description-info--price">
+                                        От 90 грн.
+                                    </div>
+                                    <div class="products-card__description-info--group">
+                                        Пицца
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="./goods.html" class="products-card">
+                            <div class="products-card__image">
+                                <img src="./img/rest-4.jpg" alt="rest-4">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Жадина-пицца</h4>
+                                    <div class="products-card__description--badge">50 мин</div>
+                                </div>
+                                <div class="products-card__description-info">
+                                    <div class="products-card__description-info--raiting">
+                                        <img src="./img/icons/star.svg" alt="star">
+                                        4.5
+                                    </div>
+                                    <div class="products-card__description-info--price">
+                                        От 90 грн.
+                                    </div>
+                                    <div class="products-card__description-info--group">
+                                        Пицца
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="./goods.html" class="products-card">
+                            <div class="products-card__image">
+                                <img src="./img/rest-5.jpg" alt="rest-5">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Точка еды</h4>
+                                    <div class="products-card__description--badge">50 мин</div>
+                                </div>
+                                <div class="products-card__description-info">
+                                    <div class="products-card__description-info--raiting">
+                                        <img src="./img/icons/star.svg" alt="star">
+                                        4.5
+                                    </div>
+                                    <div class="products-card__description-info--price">
+                                        От 90 грн.
+                                    </div>
+                                    <div class="products-card__description-info--group">
+                                        Пицца
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="./goods.html" class="products-card">
+                            <div class="products-card__image">
+                                <img src="./img/rest-6.jpg" alt="rest-6">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">PizzaBurger</h4>
+                                    <div class="products-card__description--badge">50 мин</div>
+                                </div>
+                                <div class="products-card__description-info">
+                                    <div class="products-card__description-info--raiting">
+                                        <img src="./img/icons/star.svg" alt="star">
+                                        4.5
+                                    </div>
+                                    <div class="products-card__description-info--price">
+                                        От 90 грн.
+                                    </div>
+                                    <div class="products-card__description-info--group">
+                                        Пицца
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>                    
                 </div>
             </section>
         </main>
+
+        <div class="cart-modal__overlay">
+            <div class="cart-modal">
+                <div class="cart-modal__header">
+                    <h2 class="cart-modal__header--title">Корзина</h2>
+                    <span class="cart-modal__header--close">
+                        <img src="./img/icons/close.svg" alt="close">
+                    </span>
+                </div>
+
+                <div class="cart-modal__body">
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 грн.</div>
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 грн.</div>
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 грн.</div>
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 грн.</div>
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 грн.</div>
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cart-modal__footer">
+                    <div class="cart-modal__footer--price">1250 грн.</div>
+                    <div class="cart-modal__footer--controls">
+                        <button class="btn btn-primary">
+                            <span>Оформить заказ</span>
+                        </button>
+                        <button class="btn btn-outline">
+                            <span>Отмена</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     
         <footer class="footer">
             <div class="container footer-box">
-                <div class="footer-logo logo">
+                <a href="./index.html" class="header-logo logo">
                     <img src="./img/logo.png" alt="logo">
-                </div>
+                </a>
                 <div class="footer-nav">
                     <ul>
-                        <li>Ресторанам</li>
-                        <li>Курьерам</li>
-                        <li>Пресс-центр</li>
-                        <li>Контакт</li>
+                        <a href="./goods.html">Ресторанам</a>
+                        <a href="./goods.html">Курьерам</a>
+                        <a href="./goods.html">Пресс-центр</a>
+                        <a href="./goods.html">Контакты</a>
                     </ul>
                 </div>
                 <div class="footer-social">
