--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./scripts/modalFunc.js" defer></script>
+    <script src="./scripts/restsFunc.js" defer></script>
     <title>Delivery food</title>
 </head>
 <body>
@@ -23,7 +25,7 @@
                             <img src="./img/icons/user.png" alt="user">
                             <span>Войти</span>
                         </button>
-                        <button class="btn btn-outline">
+                        <button class="btn btn-outline" id="cart-button">
                             <img src="./img/icons/shopping-cart.png" alt="cart">
                             <span>Корзина</span>
                         </button>
@@ -51,7 +53,7 @@
                         <input type="text" class="products-header--search"  placeholder="Поиск блюд и ресторанов">
                     </div>
 
-                    <div class="products-wrapper">
+                    <div class="products-wrapper" id="rests-container">
                         <a href="./goods.html" class="products-card">
                             <div class="products-card__image">
                                 <img src="./img/rest-1.jpg" alt="rest-1">
