--- a/goods.html
+++ b/goods.html
@@ -7,7 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./scripts/modalFunc.js" defer></script>
+    <script src="./scripts/goodsFunc.js" defer></script>
     <title>Delivery food</title>
 </head>
 <body>
@@ -23,7 +25,7 @@
                             <img src="./img/icons/user.png" alt="user">
                             <span>Войти</span>
                         </button>
-                        <button class="btn btn-outline">
+                        <button class="btn btn-outline" id="cart-button">
                             <img src="./img/icons/shopping-cart.png" alt="cart">
                             <span>Корзина</span>
                         </button>
@@ -37,7 +39,7 @@
             <section class="products">
                 <div class="container"> 
                     
-                    <div class="products-wrapper">
+                    <div class="products-wrapper" id="products-container">
                         <div class="products-card">
                             <div class="products-card__image">
                                 <img src="./img/good-1.jpg" alt="goods-1">
